--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "start.js",
   "dependencies": {
+    "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "node-html-parser": "^3.1.2",
     "node-telegram-bot-api": "^0.51.0",
