--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-fetch": "^2.6.1",
     "node-html-parser": "^3.1.2",
     "node-telegram-bot-api": "^0.51.0",
+    "puppeteer": "^10.0.0",
     "telegraf": "^4.3.0"
   },
   "devDependencies": {},
