--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "start.js",
   "dependencies": {
+    "express": "^4.17.1",
+    "framer-motion": "^4.1.17",
     "node-fetch": "^2.6.1",
     "node-html-parser": "^3.1.2",
-    "node-telegram-bot-api": "^0.51.0",
     "puppeteer": "^10.0.0",
-    "telegraf": "^4.3.0",
-    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
