--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "start.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "framer-motion": "^4.1.17",
     "node-fetch": "^2.6.1",
